syntax = "proto3";

option java_multiple_files = true;
option java_package = "proto.comment";
option java_outer_classname = "CommentProto";

import "property_type.proto";
import "property.proto";

service CommentService {
    rpc GetAllPendingComments (EmptyMessage) returns (stream CommentMessage) {}

    rpc AcceptComment (CommentIdMessage) returns (CommentMessage) {}

    rpc DenyComment (CommentIdMessage) returns (CommentMessage) {}

    rpc GetAllPropertyComments (PropertyIdMessage) returns (stream CommentMessage) {}

    rpc CreateComment (CreateCommentMessage) returns (CreateCommentMessageResponse) {}
}

message CommentMessage {
    int64 id = 1;
    string first_name = 2;
    string surname = 3;
    string email = 4;
    string timestamp = 5;
    string content = 6;
}

message CommentIdMessage {
    int64 id = 1;
}

message CreateCommentMessage {
    string content = 1;
    int64 request_id = 2;
    int64 ad_id = 3;
    int64 property_id = 4;
}

message CreateCommentMessageResponse {
    CommentMessage comment = 1;
    string return_message = 2;
}